[update] スクリーンショットボタン変更、結合ボタン追加
ボタンをアイコンに、結合ボタンを追加

--- a/UmaUmaChecker/UmaUmaChecker.vcxproj
+++ b/UmaUmaChecker/UmaUmaChecker.vcxproj
@@ -306,6 +306,9 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="app.ico" />
+    <Image Include="screenshot.ico" />
+    <Image Include="StartRecord.ico" />
+    <Image Include="StopRecord.ico" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="version.txt" />
