[update] ボタンの待機中状態追加
スクロールバーが上に来るのを待っているときは緑色のアイコンになるよう

--- a/UmaUmaChecker/UmaUmaChecker.rc
+++ b/UmaUmaChecker/UmaUmaChecker.rc
@@ -52,6 +52,8 @@ END
 
 // Icon with lowest ID value placed first to ensure application icon
 // remains consistent on all systems.
+WAITRECORD              ICON                    "WaitingRecord.ico"
+
 STOPRECORD              ICON                    "StopRecord.ico"
 
 SCREENSHOT              ICON                    "screenshot.ico"
