[update] スクロールバー検出処理修正
スクロールバー終了位置のオフセットを-1するように
GetMargin関数追加

--- a/UmaUmaChecker/UmaUmaChecker.vcxproj
+++ b/UmaUmaChecker/UmaUmaChecker.vcxproj
@@ -273,6 +273,7 @@
     <ClInclude Include="GrandLiveMusicListFrame.h" />
     <ClInclude Include="Log.h" />
     <ClInclude Include="object_pool.hpp" />
+    <ClInclude Include="Point.h" />
     <ClInclude Include="ScenarioData.h" />
     <ClInclude Include="ScrollbarDetector.h" />
     <ClInclude Include="Tesseract.h" />
