--- a/UmaUmaChecker/UmaUmaChecker.vcxproj
+++ b/UmaUmaChecker/UmaUmaChecker.vcxproj
@@ -274,6 +274,7 @@
     <ClInclude Include="Log.h" />
     <ClInclude Include="object_pool.hpp" />
     <ClInclude Include="Point.h" />
+    <ClInclude Include="Range.h" />
     <ClInclude Include="ScenarioData.h" />
     <ClInclude Include="ScrollbarDetector.h" />
     <ClInclude Include="Tesseract.h" />
