[update] Config読み込み処理修正
Configを最初に読み込むように(未完成)

--- a/UmaUmaChecker/UmaUmaChecker.vcxproj
+++ b/UmaUmaChecker/UmaUmaChecker.vcxproj
@@ -287,6 +287,7 @@
     <ClInclude Include="src\Config\StatusRecognizerConfig.h" />
     <ClInclude Include="src\Range.h" />
     <ClInclude Include="src\Rect.h" />
+    <ClInclude Include="src\RGB.h" />
     <ClInclude Include="src\UI\AboutDialog.h" />
     <ClInclude Include="src\Capture\CaptureMode.h" />
     <ClInclude Include="src\UI\CheckUpdateDialog.h" />
