[add] 評価点計算用のファイル追加
評価点育成用のスキル一覧を追加

--- a/UmaUmaChecker/UmaUmaChecker.vcxproj.filters
+++ b/UmaUmaChecker/UmaUmaChecker.vcxproj.filters
@@ -313,5 +313,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\SkillSelectionRange.json" />
+    <None Include="Library\SkillRatings.json" />
   </ItemGroup>
 </Project>
