--- a/UmaUmaChecker/UmaUmaChecker.vcxproj
+++ b/UmaUmaChecker/UmaUmaChecker.vcxproj
@@ -431,6 +431,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\SkillSelectionRange.json" />
+    <None Include="Library\SkillRatings.json" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
