--- a/UmaUmaChecker/UmaUmaChecker.vcxproj.filters
+++ b/UmaUmaChecker/UmaUmaChecker.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClCompile Include="src\UI\DebugImageCombineFrame.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="src\Language\Languages.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -254,6 +257,9 @@
     <ClInclude Include="src\Range.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="src\Language\Languages.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="UmaUmaChecker.rc">
@@ -305,5 +311,7 @@
   <ItemGroup>
     <None Include="locale\UmaUmaChecker.pot" />
     <None Include="locale\ja.po" />
+    <None Include="locale\en.po" />
+    <None Include="locale\ko.po" />
   </ItemGroup>
 </Project>
