[add] イベント識別用設定追加
Recognizer.json追加

--- a/UmaUmaChecker/UmaUmaChecker.vcxproj
+++ b/UmaUmaChecker/UmaUmaChecker.vcxproj
@@ -429,6 +429,7 @@
     </CopyFileToFolders>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Recognizer.json" />
     <None Include="locale\en.po" />
     <None Include="locale\ja.po" />
     <None Include="locale\ko.po" />
