[update] 設定ファイル修正
Recognizer.json修正、SkillMerge.jsonに名前変更

--- a/UmaUmaChecker/UmaUmaChecker.vcxproj
+++ b/UmaUmaChecker/UmaUmaChecker.vcxproj
@@ -430,6 +430,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Recognizer.json" />
+    <None Include="Assets\SkillMerge.json" />
     <None Include="locale\en.po" />
     <None Include="locale\ja.po" />
     <None Include="locale\ko.po" />
