--- a/UmaUmaChecker/UmaUmaChecker.vcxproj.filters
+++ b/UmaUmaChecker/UmaUmaChecker.vcxproj.filters
@@ -314,5 +314,6 @@
     <None Include="locale\en.po" />
     <None Include="locale\ko.po" />
     <None Include="Assets\Recognizer.json" />
+    <None Include="Assets\SkillMerge.json" />
   </ItemGroup>
 </Project>
