--- a/UmaUmaChecker/UmaUmaChecker.vcxproj
+++ b/UmaUmaChecker/UmaUmaChecker.vcxproj
@@ -240,6 +240,7 @@
     </ProjectReference>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Recognizer\EventDetector.cpp" />
     <ClCompile Include="src\Language\Languages.cpp" />
     <ClCompile Include="src\UI\AboutDialog.cpp" />
     <ClCompile Include="src\UI\CheckUpdateDialog.cpp" />
@@ -283,6 +284,7 @@
     <ClInclude Include="3rdparty\simstring\memory_mapped_file_win32.h" />
     <ClInclude Include="3rdparty\simstring\ngram.h" />
     <ClInclude Include="3rdparty\simstring\simstring.h" />
+    <ClInclude Include="src\Recognizer\EventDetector.h" />
     <ClInclude Include="src\Language\Languages.h" />
     <ClInclude Include="src\Range.h" />
     <ClInclude Include="src\UI\AboutDialog.h" />
