--- a/UmaUmaChecker/UmaUmaChecker.vcxproj.filters
+++ b/UmaUmaChecker/UmaUmaChecker.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClCompile Include="src\Recognizer\EventDetector.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="src\Data\RandomOptionEventData.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -266,6 +269,9 @@
     <ClInclude Include="src\Recognizer\EventDetector.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="src\Data\RandomOptionEventData.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="UmaUmaChecker.rc">
@@ -313,6 +319,7 @@
     <CopyFileToFolders Include="tessdata\jpn.traineddata">
       <Filter>リソース ファイル</Filter>
     </CopyFileToFolders>
+    <CopyFileToFolders Include="Library\RandomOptionEvents.json" />
   </ItemGroup>
   <ItemGroup>
     <None Include="locale\UmaUmaChecker.pot" />
