[update] イベント名のオートコンプリート追加
イベント名に手動で文字を入れた際にサポートカードイベントをオートコンプリートできるように

--- a/UmaUmaChecker/UmaUmaChecker.vcxproj
+++ b/UmaUmaChecker/UmaUmaChecker.vcxproj
@@ -240,10 +240,12 @@
     </ProjectReference>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\UI\Autocomplete\AutocompleteThreadHelper.cpp" />
     <ClCompile Include="src\Data\RandomOptionEventData.cpp" />
     <ClCompile Include="src\Recognizer\EventDetector.cpp" />
     <ClCompile Include="src\Language\Languages.cpp" />
     <ClCompile Include="src\UI\AboutDialog.cpp" />
+    <ClCompile Include="src\UI\Autocomplete\AutocompleteWrapper.cpp" />
     <ClCompile Include="src\UI\CheckUpdateDialog.cpp" />
     <ClCompile Include="src\Recognizer\CombineImage.cpp" />
     <ClCompile Include="src\UI\DebugImageCombineFrame.cpp" />
@@ -285,12 +287,14 @@
     <ClInclude Include="3rdparty\simstring\memory_mapped_file_win32.h" />
     <ClInclude Include="3rdparty\simstring\ngram.h" />
     <ClInclude Include="3rdparty\simstring\simstring.h" />
+    <ClInclude Include="src\UI\Autocomplete\AutocompleteThreadHelper.h" />
     <ClInclude Include="src\Data\RandomOptionEventData.h" />
     <ClInclude Include="src\Recognizer\EventDetector.h" />
     <ClInclude Include="src\Language\Languages.h" />
     <ClInclude Include="src\Range.h" />
     <ClInclude Include="src\UI\AboutDialog.h" />
     <ClInclude Include="src\Capture\CaptureMode.h" />
+    <ClInclude Include="src\UI\Autocomplete\AutocompleteWrapper.h" />
     <ClInclude Include="src\UI\CheckUpdateDialog.h" />
     <ClInclude Include="src\Recognizer\CombineImage.h" />
     <ClInclude Include="src\UI\DebugImageCombineFrame.h" />
